# eel-ros1

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  Reference.md  bundler  docker-compose.yaml  entrypoint.sh  load_config.sh  main.py  package-lock.json  package.json  package.xml  pyproject.toml  reactdev.sh  setup.py  vite.config.js
config/: config.yaml
docs/: style.md
eel-react/: package-lock.json  package.json
eel-react/public/: index.html
handlers/: example.py
launch/: react.dev.launch  react.launch  start.launch  test.launch
scripts/: cache.py  main.py  react.py
src/: auto-entry-css.js
src/eel_bundler/: main.py  utils.py
src/eel_example/: actions.py
src/eel_example/actions/: actions.py
src/eel_example/models/: ros_service.py  rosparam.py
src/eel_example/templates/: frame1.html  frame2.html  frame3.html  index.html  rcalib.html  scripts.js
src/eel_ros1/: actions.py  actions_cache.py  actions_util.py
src/eel_ros1/bundler/: main.py
src/eel_ros1/logger/: main.py
src/eel_ros1/models/: ros_service.py  ros_wrapper.py  rosparam.py
templates/: auto-entry.js  base.html  const.js  description.csv  dom-helper.js  frame1.html  frame2.html  frame3.html  index.html  rcalib.html  ros.js  ros_entrypoints.js  scenario-log.html  scripts.js  styles.css  tester.js  unload.js  utils.html  utils.js
templates/components/: base.html  footer.html  header.html  number_generator.html  number_history.html  scripts.html  styles.html
templates/components/common/: description.css  description.html  (+7 more)
tests/: subtest.py  subtest.sh  subtest_image.sh
(+42 files in other folders)
