[tool.poetry]
name = "eel-example"
version = "0.1.0"
description = "Eel Python GUI App example"
authors = ["HiraiKyo <kyo.mikhael@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^4.12.2"
eel = {extras = ["jinja2"], version = "^0.18.0"}
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
